# Galaxy-Engine-LW

./: .gitignore  AGENTS.md  AI_STATUS.md  CMakeLists.txt  CMakePresets.json  README.md  package.json
GalaxyEngine/include/: parameters.h  pch.h  rlImGuiColors_stub.h  rlImGui_stub.h
GalaxyEngine/include/IO/: io.h
GalaxyEngine/include/Particles/: particleColorVisuals.h
GalaxyEngine/include/Physics/: SPH.h  field.h  light.h
GalaxyEngine/include/UX/: parallel_for.h  saveSystem.h  screenCapture.h
GalaxyEngine/src/: globalLogic.cpp  main.cpp  rlImGui_wasm.cpp  web_api.cpp
GalaxyEngine/src/Particles/: particlesSpawning.cpp
GalaxyEngine/src/Physics/: SPH.cpp  morton.cpp  physics.cpp
GalaxyEngine/src/Sound/: sound.cpp  sound_stub.cpp
GalaxyEngine/src/UI/: UI.cpp
GalaxyEngine/src/UX/: camera.cpp  saveSystem.cpp  screenCapture.cpp  screenCapture_stub.cpp
cmake/: ffmpeg.cmake  imgui.cmake  openmp.cmake  raylib.cmake
scripts/: deploy-wasm.js  serve-wasm.js
web/: .htaccess  index.html  ui.js
